--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Contrazioni",
-  "short_name": "Contrazioni",
+  "name": "Movimenti Fetali",
+  "short_name": "Movimenti",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
